--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>The Epicurean Herald Main Page</h1>
-<p>Testing the text.</p>
+<h2>Texts</h2>
+  <a href="https://epicureanherald.github.io/Letter_to_Herodotus.html">Epicurus's Letter to Herodotus</a>
 </body>
 </html>
