--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>The Epicurean Herald Main Page</h1>
 <h2>Texts</h2>
-  <a href="https://epicureanherald.github.io/Letter_to_Herodotus.html">Epicurus's Letter to Herodotus</a>
+  <a href="https://epicureanherald.github.io/Letter_to_Herodotus.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener</a>
 </body>
 </html>
