--- a/Letter_to_Herodotus.html
+++ b/Letter_to_Herodotus.html
@@ -3,11 +3,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Epicurus's "Letter to Herodotus" - Greek text edited by H. Usener</title>
+  p.indent {
+    text-indent: 30px;
+}
 </head>
 <body>
 <main>
 
-  <h1><center>Epicurus's "Letter to Herodotus."</center><h1>
+  <h1><center>Epicurus's "Letter to Herodotus."</center></h1>
 <br>
 The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (https://archive.org). My only contribution was to proofread, insert the paragraph numbers, and concatenate the hyphenated words. I have used Usener's paragraph breaks.<br>
 <br>
