--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Epicurus's "Letter to Herodotus" - Greek text edited by H. Usener (1887)</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>The Epicurean Herald Main Page</h1>
+<h1><center>The Epicurean Herald Main Page</center></h1>
 <h2>Texts</h2>
   <a href="https://epicureanherald.github.io/Letter_to_Herodotus.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener</a>
 </body>
