Renamed and added Bailey

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Epicurus's "Letter to Herodotus" - Greek text edited by H. Usener (1887)</title>
+<title>The Epicurean Herald</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><center>The Epicurean Herald Main Page</center></h1>
 <h2>Texts</h2>
-  <a href="https://epicureanherald.github.io/Letter_to_Herodotus.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener</a>
+<ol>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener (1887)</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_EN.html">Epicurus's Letter to Herodotus - Greek text translated by C. Bailey (1926)</a> </li>
+</ol>
 </body>
 </html>
