Updates to Bailey and Immortality

--- a/Letter to Herodotus_Bailey_EN.html
+++ b/Letter to Herodotus_Bailey_EN.html
@@ -1,287 +1,15 @@
-[35] For those who are unable, Herodotus, to work in detail through all that I have written about nature, or to peruse the larger books which I have composed, I have already prepared at sufficient length an epitome of the whole system, that they may keep adequately in mind at least the most general principles in each department, in order that as occasion arises they may be able to assist themselves on the most important points, in so far as they undertake the study of nature. But those also who have made considerable progress in the survey of the main principles ought to bear in mind the scheme of the whole system set forth in its essentials. For we have frequent need of the general view, but not so often of the detailed exposition. [36] Indeed it is necessary to go back on the main principles, and constantly to fix in one's memory enough to give one the most essential comprehension of the truth. And in fact the accurate knowledge of details will be fully discovered, if the general principles in the various departments are thoroughly grasped and borne in mind, for even in the case of one fully initiated the most essential feature in all accurate knowledge is the capacity to make a rapid use of observation and mental apprehension, and &lt;this can be done if everything&gt; is summed up in elementary principles and formulae. For it is not possible for any one to abbreviate the complete course through the whole system, if he cannot embrace in his own mind by means of short
+<p class="indent">[35] For those who are unable, Herodotus, to work in detail through all that I have written about nature, or to peruse the larger books which I have composed, I have already prepared at sufficient length an epitome of the whole system, that they may keep adequately in mind at least the most general principles in each department, in order that as occasion arises they may be able to assist themselves on the most important points, in so far as they undertake the study of nature. But those also who have made considerable progress in the survey of the main principles ought to bear in mind the scheme of the whole system set forth in its essentials. For we have frequent need of the general view, but not so often of the detailed exposition. [36] Indeed it is necessary to go back on the main principles, and constantly to fix in one's memory enough to give one the most essential comprehension of the truth. And in fact the accurate knowledge of details will be fully discovered, if the general principles in the various departments are thoroughly grasped and borne in mind, for even in the case of one fully initiated the most essential feature in all accurate knowledge is the capacity to make a rapid use of observation and mental apprehension, and &lt;this can be done if everything&gt; is summed up in elementary principles and formulae. For it is not possible for any one to abbreviate the complete course through the whole system, if he cannot embrace in his own mind by means of short formulae all that might be set out with accuracy in detail. [37] Wherefore since the method I have described is valuable to all those who are accustomed to the investigation of nature, I who urge upon others the constant occupation in the investigation of nature, and find my own peace chiefly in a life so occupied, have composed for you another epitome on these lines, summing up the first principles of the whole doctrine.</p>
 
-formulae all that might be set out with accuracy in detail. 
-Wherefore since the method I have described is valuable 
-to all those who are accustomed to the investigation of 
-nature, 1 who urge upon others the constant occupation in 
-the investigation of nature, and find my own peace chiefly 
-in a life so occupied, have composed for you another 
-epitome on these lines, summing up the first principles of 
-the whole doctrine. 
+<p class="indent">First of all, Herodotus, we must grasp the ideas attached to words, in order that we may be able to refer to them and so to judge the inferences of opinion or problems of be used in investigation or reflection, so that we may not either leave everything uncertain and go on explaining to infinity or use words devoid of meaning. [38] For this purpose it is essential that the first mental image associated with each word should be regarded, and that there should be no need of explanation, if we are really to have a standard to which to refer a problem of investigation or reflection or a mental inference. And besides we must keep all our investigations in accord with our sensations, and in particular with the immediate apprehensions whether of the mind or of any one of the instruments of judgement, and likewise in accord with the feelings existing in us, in order that we may have indications whereby we may judge both the problem of sense-perception and the unseen.</p>
 
 
-First of all, Herodotus, we must grasp the ideas attached 1 Methods of 
-ἢ procedure, 
+<p class="indent">Having made these points clear, we must now consider things imperceptible to the senses. First of all, that nothing is created out of that which does not exist: for if it were, everything would be created out of everything with no need of seeds. [39] And again, if that which disappears were destroyed into that which did not exist, all things would have perished, since that into which they were dissolved would not exist. Furthermore, the universe always was such as it is now, and always will be the same. For there is nothing into which it changes: for outside the universe there is nothing which could come into it and bring about the change.</p>
 
-to words, in order that we may be able to refer to them Words to 
-and so to judge the inferences of opinion or problems of be used in 
-investigation or reflection, so that we may not either leave nes 
-everything uncertain and go on explaining to infinity or 
-use words devoid of meaning For this purpose it 1s 
-essential that the first mental image associated with each 
-word should be regarded, and that there should be no 
-need of explanation, 1f we are really to have a standard to 
-which to refer a problem of investigation or reflection or 
-a mental inference. And besides we must keep all our a The 
-investigations in accord with our sensations, and in par- ΡΣ 
-ticular with the immediate apprehensions whether of the 
-mind or of any one of the instruments of judgement, 
-and likewise in accord with the feelings existing in us, 
-in order that we may have indications whereby we may 
-judge both the problem of sense-perception and the 
+<p class="indent">Moreover, the universe is (bodies and space): for that bodies exist sense itself witnesses in the experience of all men, and in accordance with the evidence of sense we must of necessity judge of the imperceptible by reasoning, as I have already said. [40] And if there were not that which we term void and place and intangible existence, bodies would have nowhere to exist and nothing through which to move, as they are seen to move. And besides these two nothing can even be thought of either by conception or on the analogy of things conceivable such as could be grasped as whole existences and not spoken of as the accidents or properties of such existences. Furthermore, among bodies some are compounds, and others those of which compounds are formed. [41] And these latter are indivisible and unalterable (if, that is, all things are not to be destroyed into the non-existent, but something permanent is to remain behind at the dissolution of compounds) they are completely solid in nature, and can by no means be dissolved in any part. So it must needs be that the first-beginnings are indivisible corporeal existences.</p>
 
+<p class="indent">Moreover, the universe is boundless. For that which is bounded has an extreme point, and the extreme point is seen against something else. So that as it has no extreme point, it has no limit, and as it has no limit, it must be boundless and not bounded. [42] Furthermore, the infinite is boundless both in the number of the bodies and in the extent of the void. For if on the one hand the void were boundless, and the bodies limited in number, the bodies could not stay anywhere, but would be carried about and scattered through the infinite void, not having other bodies to support them and keep them in place by means of collisions. But if, on the other hand, the void were limited, the infinite bodies would not have room wherein to take their place.</p>
 
-unseen. 
-
-
-Having made these points clear, we must now consider II The Uw- 
-
-
-things imperceptible to the senses First of all, that 27S ad ws 
-
-x i . constituents, 
-nothing is created out of that which does not exist: for 1f A Impercep- 
-4 : tible things, 
-it were, everything would be created out of everything Ὁ Nothing is 
-with no need of seeds. And again, 1f that which dis- created out of 
-appears were destroyed into that which did not exist, all nothing 
-
-δ i ἢ 2 Nothing 1s 
-
-things would have perished, since that into which they destroyed 
-were dissolved would not exist. Furthermore, the universe pa art 
-always was such as it is now, and always will be the same. verse 1s ever 
-
-
-For there 1s nothing into which it changes: for outside the the same. 
-universe there is nothing which could come into it and 
-bring about the change. 
-
-
-40 
-
-
-41 
-
-
-43 
-
-
-22 I, ΠΡῸΣ HPOAOTON 
-
-
-᾿Αλλὰ μὴν καὶ τὸ πᾶν ἐστι (σώματα Kai τόπος)' σώματα 
-μὲν γὰρ ws ἔστιν, αὐτὴ ἡ αἴσθησις ἐπὶ πάντων μαρτυρεῖ, καθ᾽ 
-ἣν ἀναγκαῖον τὸ ἄδηλον τῷ λογισμῷ τεκμαίρεσθαι, ὥσπερ 
-“π᾿ Α 4 > x Ἂς a εἴ 4 ¥ . 
-προεῖπον τὸ πρόσθεν" | εἰ (δὲ) μὴ ἦν ὃ κενὸν καὶ χώραν καὶ 
-μ col Ψ' Bd , > > Ν ΄ “ 
-ἀναφῆ φύσιν ὀνομάζομεν, οὐκ ἂν εἶχε τὰ σώματα ὅπου ἦν 
-οὐδὲ δι’ οὗ ἐκινεῖτο, καθάπερ φαίνεται κινούμενα. παρὰ δὲ 
-ταῦτα οὐθὲν οὐδ᾽ ἐπινοηθῆναι δύναται οὔτε περιληπτικῶς οὔτε 
-5 ἀναλόγως τοῖς περιληπτοῖς, ὡς καθ᾽ ὅλας φύσεις λαμβανόμενα 
-καὶ μὴ ὡς τὰ τούτων συμπτώματα ἢ συμβεβηκότα λεγόμενα. 
-καὶ μὴν καὶ τῶν σωμάτων τὰ μέν ἐστι συγκρίσεις, τὰ δ᾽ 
-ἐξ ὧν αἱ συγκρίσεις πεποίηνται: | ταῦτα δέ ἐστιν ἄτομα καὶ 
-ἀμετάβλητα, εἴπερ μὴ μέλλει πάντα εἰς τὸ μὴ ὃν φθαρήσεσθαι 
-ἀλλ᾽ ἰσχῦόν τι ὑπομένειν ἐν ταῖς διαλύσεσι τῶν συγκρίσεωι"", 
-πλήρη τὴν φύσιν ὄντα, οὐκ ἔχοντα Onn ἢ ὅπως διαλυθήσεται. 
-
-
-had Ν 3 Ν > , 4 ~ - , - 
-5 More τὰς ἀρχὰς ἀτύμους ἀναγκαῖον εἷναι σωμάτων φύσεις. 
-
-
-pce) 
-
-
-᾿Αλλὰ μὴν Kai TO πᾶν ἄπειρόν ἐστι. τὸ yap πεπερασμένον» 
-ἄκρον ἔχει τὸ δὲ ἄκρον παρ᾽ ἕτερόν τι θεωρεῖται. ὥστε οὐκ 
-Μ ” , J , Ν > we a 
-ἔχον ἄκρον πέρας οὐκ ἔχει: πέρας δὲ οὐκ ἔχον ἄπειρον av 
-, x lol , lot 
-εἴη καὶ οὐ πεπερασμένον. καὶ μὴν καὶ TH πλήθει τῶν 
-σωμάτων ἄπειρόν ἐστι τὸ πᾶν καὶ τῷ μεγέθει τοῦ κενοῦ. } 
-ς N 
-εἴτε yap ἢ» τὸ Kerdv ἄπειρον, τὰ δὲ σώματα ὡρισμένα, 
-> na U«f ν x , > Pes , x ht 
-οὐδαμοῦ av ἔμενε τὰ σώματα, ἀλλ᾽ ἐφέρετο κατὰ τὸ ἄπειρον 
-4 * Μ Ν, ε Ζ' Ν 
-κενὸν διεσπαρμένα, οὐκ ἔχοντα τὰ ὑπερείδοντα καὶ στέλλοντα 
-x ἈΝ ’ ν 4X ἈΝ ἣν. « , ’ 
-κατὰ τὰς ἀνακοιτάς. εἴτε τὸ κενὸν ἦν ὡρισμένον, οὐκ ἂν 
-Ν bl , 
-εἶχε τὰ ἄπειρα σώματα ὅπου ἐνέστη. 
-x “ 
-Πρός τε τούτοις τὰ ἄτομα τῶν σωμάτων καὶ μεστά, ἐξ 
-
-
-7 (σώματα καὶ τόπος) supplevit Usener 10 τὸ πρόσθεν 
-τύπος δὲ Usener 401 (δὲν supplevit Gassend1 ὃ BG: op 
-FHPQ: ὃν Usener 4 οὐδ Usener: οὔτε libri περιληπτι- 
-κῶς Co Usener* περιληπτῶς libr. cett. 5-7 ὡς. . AapBavipeva 
-«++ λεγόμενα) ὅσα. . . λαμβάνομεν... λέγομεν Usener 7 καὶ 
-τῶν B'P'QCo: καὶ ταυτὸν ΕῊΗΡΖ 41 3 ἰσχῦόν te scmpsi 
-(idem Bignone): ἰσχύοντα ibn ἰσχύειν τι Usener: (ἰσχύοντά τινα 
-in notis mss. Rohde) ὑπομένειν] ὑπομενεῖ» Cronert 4 ὄντα 
-Usener: ὅταν libri: ὄντα καὶ Meibom . οἷα δὴ Bignone 7 τὸ δὲ 
-FHPQ: τὸ γὰρ Βα post θεωρεῖται Usener ἀλλὰ μὴν τὸ 
-πᾶν οὐ παρ᾽ ἕτερόν τι θεωρεῖται supplendum censuit 42 5 ἐνέστη 
-BFGP?: éveort HP'Q 
-
-
-Scholia 
-
-
-39,7, post ἀλλὰ μὴν καὶ legitur τοῦτο καὶ ἐν τῇ Μεγάλῃ ἐπιτομῇ φησι 
-κατ᾽ ἀρχὴν καὶ ἐν τῇ ἃ Περὶ φύσεως 
-ἀλλὰ μὴν... ἀρχὴν om. Ζ ἃ BHPQ: πρώτη FZ 
-
-
-40 
-
-
-41 
-
-
-42 
-
-
-Scholia 
-
-
-1. TO HERODOTUS 23 ; 
-
-
-Moreover, the universe is (bodies and space): for that B Bodies 
-bodies exist sense itself witnesses in the experience of all os 
-men, and in accordance with the evidence of sense we consists of 
-must of necessity judge of the imperceptible by reasoning, eae and 
-as 1 have already said. And if there were not that which 
-we term void and place and intangible existence, bodies 
-would have nowhere to exist and nothing through which 
-to move, as they are seen to move. And besides these There is no 
-two nothing can even be thought of either by conception pe hs 
-or on the analogy of things conceivable such as could be existence 
-grasped as whole existences and not spoken of as the 
-accidents or properties of such existences. Furthermore, 
-among bodies some are compounds, and others those of 
-which compounds are formed. And these latter are Body exists 
-indivisible and unalterable (if, that is, all things are not to ἵν τὰς OER 
-be destroyed into the non-existent, but something per- particles 
-manent 15 to remain behind at the dissolution of com- 
-pounds) they are completely solid in nature, and can 
-by no means be dissolved in any part. So it must 
-needs be that the first-beginnings are indivisible corporeal 
-existences. 
-
-Moreover, the universe is boundless. For that which ts Ὁ Infinity of 
-bounded has an extreme point. and the extreme point 15 ahs oa δὰ θὰ 
-seen against something else. So that as τί has no extreme 15» !nfimte, 
-point, it has no hmit, and as it has no limit, 1t must be 
-boundless and not bounded. Fuithermore, the infinite 15 both in the 
-boundless both in the number of the bodies and in the akan 
-extent of the void. For if on the one hand the void were the extent of 
-boundless, and the bodies limited in number, the bodies ae 
-could not stay anywhere, but would be carried about and 
-scattered through the infinite void, not having other bodies 
-to support them and keep them in place by means of 
-colhsions. But if, on the other hand, the void were limited, 
-the infinite bodies would not have room wherein to take 
-their place. 
-
-
-Besides this the indivisible and solid bodies, out of Ms oe 
-the atoms— 
-40 7 post καὶ τῶν legitur τοῦτο καὶ ἐν τῇ πρώτῃ Περὶ φύσεως καὶ τῇ but not 
-ιδ καὶ t€ καὶ τῇ Μεγάλη ἐπιτομῇ infinite 
-
-καὶ τε BGHP'Q: καὶ τῇ ἴε FP* θιβεγοηξξβ, 
-
-
-43 
-
-
-44 
-
-
-45 
-
-
-10 
-
-
-an 
-
-
-an 
-
-
-24 I. ΠΡῸΣ HPOAOTON 
-
-
-ὧν καὶ al συγκρίσεις γίνονται καὶ els ἃ διαλύονται, ἀπερίληπτά 
-ἐστι ταῖς διαφοραῖς τῶν σχημάτων: οὐ γὰρ δυνατὸν γενέσθαι 
-τὰς τοσαύτας διαφορὰς ἐκ τῶν αὐτῶν σχημάτων περιειλημ- 
-μένων. καὶ καθ᾽ ἑκάστην δὲ σχημάτισιν ἁπλῶς ἄπειροί εἰσιν 
-αἵ ὅμοιαι, ταῖς ὃὲ διαφοραῖς οὐχ ἁπλῶς ἄπειροι ἀλλὰ μόνον 
-ἀπερίληπτοι. 
-Κινοῦνταί τε συνεχῶς αἱ ἄτομοι τὸν αἰῶνα καὶ αἱ piv... 
-εἰς μακρὰν an’ ἀλλήλων διιστάμεναι, αἱ δὲ αὖ τὸν παλμὸν 
-- fot a 
-ἴσχουσιν, ὅταν τύχωσι TH περιπλοκῇ κεκλιμέναι ἣ στεγαζό- 
-μεναι παρὰ τῶν πλεκτικῶν. | ἢ τε γὰρ τοῦ κενοῦ φύσις ἡ 
-διορίζυσα ἑκάστην αὐτὴν τοῦτο παρασκευάζει, τὴν ὑπέρεισιν 
-οὐχ οἵα τε οὖσα ποιεῖσθαι: ἢ τε στερεότης ἡ ὑπάρχουσα 
-αὐταῖς κατὰ τὴν σύγκρουσιν τὸν ἀποπαλμὸν ποιεῖ, ἐφ᾽ ὅποσον 
-ἂν ἡ περιπλοκὴ τὴν ἀποκατάστασιν ἐκ τῆς συγκρούσεως διδῷ. 
-ἀρχὴ δὲ τούτων οὐκ ἔστιν, αἰτίων τῶν ἀτόμων οὐσῶν καὶ 
-τοῦ κενοῦ. 
-« ’ Ἂς Ν - , , A 
-Η τοσαύτη δὴ φωνὴ τούτων πάντων μνημονευομένων TOV 
-ε Ν Ἃ: ε z lal n » , 
-ἱκανὸν τύπον ὑποβάλλει τῆς TOV ὄντων φύσεως ἐπινοίας, 
-᾽ x N 4 , Ἂ - κι σ΄ > 9 , 
-Αλλὰ μὴν καὶ κόσμοι ἄπειροι εἰσὶν οἵ θ᾽ ὅμοιοι τούτῳ 
-| , “ Ν Μ᾿ Ε2 ~ ε 
-καὶ οἱ ἀνόμοιοι. al τε γὰρ ἄτομοι ἄπειροι οὖσαι, ὡς ἄρτι 
-ἀπεδείχθη, φέρονται καὶ πορρωτάτω. οὐ γὰρ κατανήλωνται 
-ς a ¥ - ΄ ΄ A © 1) @ 
-at τοιαῦται ἄτομοι, ἐξ ὧν dv γένοιτο κόσμος ἣ ὑφ᾽ ὧν ἂν 
-f ° . “ we , Ψ a? Ld 
-ποιηθείη, οὔτ᾽ eis ἕνα οὔτ᾽ els πεπερασμένους, οὔθ᾽ ὅσοι 
-“ +n) lid , Ve La 3 Ν Ν 
-τοιοῦτοι οὔθ᾽ ὅσοι διάφοροι τούτοις. ὥστε οὐδὲν τὸ ἐμποδο- 
-στατῆσόν ἐστι πρὸς τὴν ἀπειρίαν τῶν κόσμων. | 
-9 αὐτῶν om G 43 1 lacunam post καὶ αἱ μὲν indicavit 
-Bignone, ante eadem verba Usener 2 a} Usener (Gn commen- 
-tario) αὐτὸν libri: αὐτοῦ Brieger 3 ἴσχουσιν] ἴσχονσαι Brieger 
-τῇ περιπλουκῇ Usener: τὴν περιπλοκὴν libri 4 παρὰ G: περὶ 
-BHPQ 44 2 αὐτὴν] αὐτῶν G 6 αἰτίων] ἀϊδίων H. Weil 
-45 1 5) BPQ δὲ G 2 (ταῖς περὶ) ante τῆς inseruit Usener 
-
-
-ἐπινοίας Ζ1 Bignone ἐπινοίαις libr cett. Usener 3 οἵ θ᾽ B°GH 
-PQCo: & BIFZ 4 καὶ of GHPQCo: καὶ BFZ?: εἴτ᾽ 
-
-
-Scholia 
-
-
-42 12 post ἀπερίληπτοι legitur οὐδὲ γάρ φησιν ἐνδοτέρω eis ἄπειρον 
-τὴν τομὴν τυγχάνειν, Ἀέγει δέ, ἐπειδὴ αἱ ποιότητες μεταβάλλονται, εἶ 
-μέλλει τις μὴ καὶ τοῖς μεγέθεσιν ἁπλῶς εἰς ἄπειρον αὐτὰς ἐκβάλλειν 
-λέγει] λήγει C. F. Hermann: λήγειν Usener εἰ μέλλει... 
-ἐμβάλλειν in textu retinuit Muehll μέλλει libri plerique : 
-μέλλοι BG 
-43 1 post al ἄτομοι legitur φησὶ δὲ ἐνδοτέρω καὶ ἰσοταχῶς αὐτὰς 
-κινεῖσθαι τοῦ κενοῦ τὴν εἶξιν ὁμοίαν παρεχομένου καὶ τῇ κουφοτάτῃ καὶ 
-τῇ Bapurary 
-εἶξιν Kuhn: ἴξιν B: ἐξὶν libr. cett. 
-
-
-I, TO HERODOTUS 25 
-
+<p class="indent">Besides this the indivisible and solid bodies, out of
 
 which too the compounds are created and into which they 
 are dissolved, have an incomprehensible number of 
