Update Letter to Herodotus_Bailey_EN.html

--- a/Letter to Herodotus_Bailey_EN.html
+++ b/Letter to Herodotus_Bailey_EN.html
@@ -9,32 +9,9 @@
 
 <p class="indent">Moreover, the universe is boundless. For that which is bounded has an extreme point, and the extreme point is seen against something else. So that as it has no extreme point, it has no limit, and as it has no limit, it must be boundless and not bounded. [42] Furthermore, the infinite is boundless both in the number of the bodies and in the extent of the void. For if on the one hand the void were boundless, and the bodies limited in number, the bodies could not stay anywhere, but would be carried about and scattered through the infinite void, not having other bodies to support them and keep them in place by means of collisions. But if, on the other hand, the void were limited, the infinite bodies would not have room wherein to take their place.</p>
 
-<p class="indent">Besides this the indivisible and solid bodies, out of
+<p class="indent">Besides this the indivisible and solid bodies, out of which too the compounds are created and into which they are dissolved, have an incomprehensible number of varieties in shape for it is not possible that such great varieties of things should arise from the same (atomic) shapes, if they are limited in number. And so in each shape the atoms are quite infinite in number, but their differences of shape are not quite infinite, but only incomprehensible in number.</p>
 
-which too the compounds are created and into which they 
-are dissolved, have an incomprehensible number of 
-varieties in shape for it is not possible that such great 
-varieties of things should arise from the same (atomic) 
-shapes, if they are limited in number. And so in each 
-shape the atoms are quite infinite in number, but their 
-differences of shape are not quite infinite, but only incom- 
-prehensible in number. 
-
-43. And the atoms move continuously for all time, some of E Motion of 
-them (falling straight down, others swerving, and others ‘"* *°™* 
-recoiling from their collisions. And of the latter, some 
-are borne on) separating to a long distance from one 
-another, while others again recoil and recoil, whenever 
-they chance to be checked by the interlacing with others, 
-
-44 or else shut in by atoms interlaced around them. For on 
-the one hand the nature of the void which separates each 
-atom by itself brings this about, as it 1s not able to afford 
-resistance, and on the other hand the hardness which 
-belongs to the atoms makes them recoil after collision to 
-as great a distance as the interlacing permits separation 
-after the collision. And these motions have no beginning, 
-since the atoms and the vord are the cause. 
+<p class="indent">[43] And the atoms move continuously for all time, some of them (falling straight down, others swerving, and others recoiling from their collisions. And of the latter, some are borne on) separating to a long distance from one another, while others again recoil and recoil, whenever they chance to be checked by the interlacing with others, or else shut in by atoms interlaced around them. [44] For on the one hand the nature of the void which separates each atom by itself brings this about, as it is not able to afford resistance, and on the other hand the hardness which belongs to the atoms makes them recoil after collision to as great a distance as the interlacing permits separation after the collision. And these motions have no beginning, since the atoms and the void are the cause.</p> 
 
 45 These brief sayings, if all these points are borne in mind, 
 afford a sufficient outline for our understanding of the 
