Added bilingual Herodotus; various changes

--- a/Letter_to_Herodotus_Bailey_EN.html
+++ b/Letter_to_Herodotus_Bailey_EN.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<h1><center>Epicurus's "Letter to Herodotus"</center></h1>
+	<h1>Epicurus's "Letter to Herodotus"</h1>
 
 	<h3>Source</h3>
 The text is from Epicurus: The Extant Remains (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up). My only contribution was to proofread, insert the paragraph numbers, and concatenate the hyphenated words. I have used Bailey's paragraph breaks.
