--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><center>The Epicurean Herald Main Page</center></h1>
+<h1>The Epicurean Herald Main Page</h1>
 <h2>Texts</h2>
 <ol>
   <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener (1887)</a> </li>
   <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_EN.html">Epicurus's Letter to Herodotus - Greek text translated by C. Bailey (1926)</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_GR_EN.html">Epicurus's Letter to Herodotus - Greek-English Bilingual version</a> </li>
 </ol>
 </body>
 </html>
