--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Texts</h2>
 <ol>
   <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by H. Usener (1887)</a> </li>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_EN.html">Epicurus's Letter to Herodotus - Greek text translated by C. Bailey (1926)</a> </li>
+  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_EN.html">Epicurus's Letter to Herodotus - English text translated by C. Bailey (1926)</a> </li>
   <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_GR_EN.html">Epicurus's Letter to Herodotus - Greek-English Bilingual version</a> </li>
 </ol>
 </body>
