Continued Bailey bilingual

--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -48,7 +48,78 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         For we have frequent need of the general view, but not so often of the detailed exposition.
     </td>
 </tr>
-
+<tr>
+    <td>
+        [36] βαδιστέον μὲν οὖν ἐπ᾽ ἐκεῖνα καὶ συνεχῶς, ἔν τῇ μνήμῃ τὸ τοσοῦτον ποιητέον, ἀφ᾽ οὗ ἤ τε κυριωτάτη ἐπιβολὴ ἐπὶ τὰ πράγµατα ἔσται
+    </td>
+    <td>
+        [36] Indeed it is necessary to go back on the main principles, and constantly to fix in one's memory enough to give one the most essential comprehension of the truth.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ δὴ καὶ τὸ κατὰ µέρος ἀκρίβωμα πᾶν ἐξευρήσεται, τῶν ὁλοσχερωτάτων τύπων εὖ περιειλημμένων καὶ μνημονευομένων· 
+    </td>
+    <td>
+        And in fact the accurate knowledge of details will be fully discovered, if the general principles in the various departments are thoroughly grasped and borne in mind,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐπεὶ καὶ τοῦ τετελεσιουργημένου τοῦτο κυριώτατον τοῦ παντὸς ἀκριβώματος γὶνεται, τὸ ταῖς ἐπιβολαῖς ὀξέως δύνασθαι χρῆσθαι, καὶ &lt;τοῦτο γίνοιτʹ ἂν ἁπάντων&gt; πρὸς ἁπλᾶ στοιχειώματα καὶ φωνὰς συναγομένων.
+    </td>
+    <td>
+        for even in the case of one fully initiated the most essential feature in all accurate knowledge is the capacity to make a rapid use of observation and mental apprehension, and &lt;this can be done if everything&gt; is summed up in elementary principles and formulae.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ οἷόν τε τὸ πύκνωμα τῆς συνεχοῦς τῶν ὅλων περιοδείας εἶναι μὴ δυναμένου διὰ βραχεῶν φωνῶν ἅπαν ἐμπεριλαβεῖν ἐν αὑτῷ τὸ καὶ κατὰ μέρος ἂν ἐξακριβωθέν.
+    </td>
+    <td>
+        For it is not possible for any one to abbreviate the complete course through the whole system, if he cannot embrace in his own mind by means of short formulae all that might be set out with accuracy in detail.
+    </td>
+</tr>
+<tr>
+    <td>
+        [37] Ὅθεν δὴ πᾶσι χρησίμης οὔσης τοῖς ῴκειωμένοις φυσιολογίᾳ τῆς τοιαύτης ὁδοῦ, παρεγγυῶν τὸ συνεχὲς ἐνέργημα ἐν φυσιολογίᾳ καὶ τοιούτῳ μάλιστα ἐγγαληνίζων τῷ βίῳ ἐποίησά σοι καὶ τοιαύτην τινὰ ἐπιτομὴν καὶ στοιχείωσιν τῶν ὅλων δοξῶν.
+    </td>
+    <td>
+        [37] Wherefore since the method I have described is valuable to all those who are accustomed to the investigation of nature, I who urge upon others the constant occupation in the investigation of nature, and find my own peace chiefly in a life so occupied, have composed for you another epitome on these lines, summing up the first principles of the whole doctrine.
+    </td>
+</tr>
+<tr>
+    <td>
+        Πρῶτον μὲν οὖν τὰ ὑποτεταγμένα τοῖς φθόγγοις, ὦ Ἡρόδοτε, δεῖ εἰληφέναι, ὅπως ἂν τὰ δοξαζόμενα ἢ ζητούμενα ἢ ἀπορούμενα ἔχωμεν εἰς ταῦτα ἀναγαγόντες ἐπικρίνειν, καὶ μὴ ἄκριτα πάντα ἡμῖν &lt;ᾗ&gt; εἰς ἄπειρον ἀποδεικνύουσιν ἢ κενοὺς φθόγγους ἔχωμεν.
+    </td>
+    <td>
+        First of all, Herodotus, we must grasp the ideas attached to words, in order that we may be able to refer to them and so to judge the inferences of opinion or problems of be used in investigation or reflection, so that we may not either leave everything uncertain and go on explaining to infinity or use words devoid of meaning.
+    </td>
+</tr>
+<tr>
+    <td>
+        [38] ἀνάγκη γὰρ τὸ πρῶτον ἐννόημα καθ᾽ ἕκαστον φθόγγον βλέπεσθαι καὶ μηθὲν ἀποδείξεως προσδεῖσθαι, εἴπερ ἕξομεν τὸ ζητούμενον ἢ ἀπορούμενον καὶ δοξαζόμενον ἐφ᾽ ὃ ἀνάξομεν.
+    </td>
+    <td>
+        [38] For this purpose it is essential that the first mental image associated with each word should be regarded, and that there should be no need of explanation, if we are really to have a standard to which to refer a problem of investigation or reflection or a mental inference.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἔτι τε κατὰ τὰς αἰσθήσεις δεῖ πάντα τηρεῖν καὶ ἁπλῶς &lt;κατὰ&gt; τὰς παρούσας ἐπιβολὰς εἴτε διανοίας εἴθ᾽ ὅτου δήποτε τῶν κριτηρίων, ὁμοίως δὲ κατὰ τὰ ὑπάρχοντα πάθη, ὅπως ἂν καὶ τὸ προσμένον καὶ τὸ ἄδηλον ἔχωμεν οἷς σημειωσόμεθα.
+    </td>
+    <td>
+        And besides we must keep all our investigations in accord with our sensations, and in particular with the immediate apprehensions whether of the mind or of any one of the instruments of judgement, and likewise in accord with the feelings existing in us, in order that we may have indications whereby we may judge both the problem of sense-perception and the unseen.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ταῦτα δεῖ διαλαβόντας συνορᾶν ἤδη περὶ τῶν ἀδήλων·
+    </td>
+    <td>
+        Having made these points clear, we must now consider things imperceptible to the senses.
+    </td>
+</tr>
 </table>
 </body>
 </html>
