--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -120,6 +120,78 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         Having made these points clear, we must now consider things imperceptible to the senses.
     </td>
 </tr>
+<tr>
+    <td>
+        πρῶτον μὲν ὅτι οὐδὲν γίνεται ἐκ τοῦ μὴ ὄντος.
+    </td>
+    <td>
+        First of all, that nothing is created out of that which does not exist:
+    </td>
+</tr>
+<tr>
+    <td>
+        πᾶν γὰρ ἐκ παντὸς ἐγίνετ᾽ ἂν σπερμάτων γε οὐθὲν προσδεόμενον.
+    </td>
+    <td>
+        for if it were, everything would be created out of everything with no need of seeds.
+    </td>
+</tr>
+<tr>
+    <td>
+        [39] καὶ εἰ ἐφθείρετο δὲ τὸ ἀφανιζόμενον εἰς τὸ μὴ ὄν, πάντα ἂν ἀπωλώλει τὰ πράγματα, οὐκ ὄντων εἰς ἃ διελύετο.
+    </td>
+    <td>
+        [39] And again, if that which disappears were destroyed into that which did not exist, all things would have perished, since that into which they were dissolved would not exist.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν καὶ τὸ πᾶν ἀεὶ τοιοῦτον ἦν οἷον νῦν ἐστι, καὶ ἀεὶ τοιοῦτον ἔσται. 
+    </td>
+    <td>
+        Furthermore, the universe always was such as it is now, and always will be the same.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐθὲν γάρ ἐστιν εἰς ὃ μεταβάλλει.
+    </td>
+    <td>
+        For there is nothing into which it changes:
+    </td>
+</tr>
+<tr>
+    <td>
+        παρὰ γὰρ τὸ πᾶν οὐθέν ἐστιν, ὃ ἂν εἰσελθὸν εἰς αὐτὸ τὴν μεταβολὴν ποιήσαιτο. 
+    </td>
+    <td>
+        for outside the universe there is nothing which could come into it and bring about the change.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν καὶ τὸ πᾶν ἐστι &lt;σώματα καὶ τόπος&gt;·
+    </td>
+    <td>
+        Moreover, the universe is (bodies and space):
+    </td>
+</tr>
+<tr>
+    <td>
+        σώματα μὲν γὰρ ὡς ἔστιν, αὐτὴ ἡ αἴσθησις ἐπὶ πάντων μαρτυρεῖ, καθ᾽ ἣν ἀναγκαῖον τὸ ἄδηλον τῷ λογισμῷ τεκμαίρεσθαι, ὥσπερ προεῖπον τὸ πρόσθεν.
+    </td>
+    <td>
+        for that bodies exist sense itself witnesses in the experience of all men, and in accordance with the evidence of sense we must of necessity judge of the imperceptible by reasoning, as I have already said.
+    </td>
+</tr>
+<tr>
+    <td>
+        [40] εἰ &lt;δὲ&gt; μὴ ἦν ὃ κενὸν καὶ χώραν καὶ ἀναφῆ φύσιν ὀνομάζομεν, οὐκ ἂν εἶχε τὰ σώματα ὅπου ἦν οὐδὲ δι᾽ οὗ ἐκινεῖτο, καθάπερ φαίνεται κινούμενα.
+    </td>
+    <td>
+        [40] And if there were not that which we term void and place and intangible existence, bodies would have nowhere to exist and nothing through which to move, as they are seen to move.
+    </td>
+</tr>
 </table>
 </body>
 </html>
