--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -192,6 +192,150 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         [40] And if there were not that which we term void and place and intangible existence, bodies would have nowhere to exist and nothing through which to move, as they are seen to move.
     </td>
 </tr>
+<tr>
+    <td>
+        παρὰ δὲ ταῦτα οὐθὲν οὐδ᾽ ἐπινοηθῆναι δύναται οὔτε περιληπτικῶς οὔτε ἀναλόγως τοῖς περιληπτοῖς, ὡς καθ᾽ ὅλας φύσεις λαμβάνομενα καὶ μὴ ὡς τὰ τούτων συμπτώματα ἢ συμβεβηκότα λέγομενα. 
+    </td>
+    <td>
+        And besides these two nothing can even be thought of either by conception or on the analogy of things conceivable such as could be grasped as whole existences and not spoken of as the accidents or properties of such existences.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν καὶ τῶν σωμάτων τὰ μέν ἐστι συγκρίσεις, τὰ δ᾽ ἐξ ὧν αἱ συγκρίσεις πεποίηνται· 
+    </td>
+    <td>
+        Furthermore, among bodies some are compounds, and others those of which compounds are formed.
+    </td>
+</tr>
+<tr>
+    <td>
+        [41] ταῦτα δέ ἐστιν ἄτομα καὶ ἀμετάβλητα, εἴπερ μὴ μέλλει πάντα εἰς τὸ μὴ ὃν φθαρήσεσθαι ἀλλ᾽ ἰσχῦόν τι ὑπομένειν ἐν ταῖς διαλύσεσι τῶν συγκρίσεων, πλήρη τὴν φύσιν ὄντα, οὐκ ἔχοντα ὅπῃ ἢ ὅπως διαλυθήσεται.
+    </td>
+    <td>
+        [41] And these latter are indivisible and unalterable (if, that is, all things are not to be destroyed into the non-existent, but something permanent is to remain behind at the dissolution of compounds) they are completely solid in nature, and can by no means be dissolved in any part.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε τὰς ἀρχὰς ἀτόμους ἀναγκαῖον εἶναι σωμάτων φύσεις. 
+    </td>
+    <td>
+        So it must needs be that the first-beginnings are indivisible corporeal existences.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν καὶ τὸ πᾶν ἄπειρόν ἐστι.
+    </td>
+    <td>
+        Moreover, the universe is boundless.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ γὰρ πεπερασμένον ἄκρον ἔχει τὸ δὲ ἄκρον παρ᾽ ἕτερόν τι θεώρεῖται.
+    </td>
+    <td>
+        For that which is bounded has an extreme point, and the extreme point is seen against something else.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε οὐκ ἔχον ἄκρον πέρας οὐκ ἔχει·
+    </td>
+    <td>
+        So that as it has no extreme point, it has no limit,
+    </td>
+</tr>
+<tr>
+    <td>
+        πέρας δὲ οὐκ ἔχον ἄπειρον ἂν εἴη καὶ οὐ πεπερασμένον.
+    </td>
+    <td>
+        and as it has no limit, it must be boundless and not bounded.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν καὶ τῷ πλήθει τῶν σωμάτων ἄπειρόν ἐστι τὸ πᾶν καὶ τῷ μεγέθει τοῦ κενοῦ. 
+    </td>
+    <td>
+        Furthermore, the infinite is boundless both in the number of the bodies and in the extent of the void.
+    </td>
+</tr>
+<tr>
+    <td>
+        [42] εἴτε γὰρ ἦν τὸ κενὸν ἄπειρον, τὰ δὲ σώματα ὡρισμένα, οὐδαμοῦ ἂν ἔμενε τὰ σώματα, ἀλλ᾽ ἐφέρετο κατὰ τὸ ἄπειρον κενὸν διεσπαρμένα, οὐκ ἔχοντα τὰ ὑπερείδοντα καὶ στέλλοντα κατὰ τὰς ἀνακοπάς.
+    </td>
+    <td>
+        [42] For if on the one hand the void were boundless, and the bodies limited in number, the bodies could not stay anywhere, but would be carried about and scattered through the infinite void, not having other bodies to support them and keep them in place by means of collisions.
+    </td>
+</tr>
+<tr>
+    <td>
+        εἴτε τὸ κενὸν ἦν ὡρισμένον, οὐκ ἂν εἶχε τὰ ἄπειρα σώματα ὅπου ἐνέστη. 
+    </td>
+    <td>
+        But if, on the other hand, the void were limited, the infinite bodies would not have room wherein to take their place.
+    </td>
+</tr>
+<tr>
+    <td>
+        Πρός τε τούτοις τὰ ἄτομα τῶν σωμάτων καὶ μεστά, ἐξ ὧν καὶ αἱ συγκρίσεις γίνονται καὶ εἰς ἃ διαλύονται, ἀπερίληπτά ἐστι ταῖς διαφοραῖς τῶν σχημάτων·
+    </td>
+    <td>
+        Besides this the indivisible and solid bodies, out of which too the compounds are created and into which they are dissolved, have an incomprehensible number of varieties in shape
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ δυνατὸν γενέσθαι τὰς τοσαύτας διαφορὰς ἐκ τῶν αὐτῶν σχημάτων περιειλημμένων. 
+    </td>
+    <td>
+        for it is not possible that such great varieties of things should arise from the same (atomic) shapes, if they are limited in number.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ καθ᾽ ἑκάστην δὲ σχημάτισιν ἁπλῶς ἄπειροί εἰσιν αἱ ὅμοιαι, ταῖς δὲ διαφοραῖς οὐχ ἁπλῶς ἄπειροι ἀλλὰ μόνον ἀπερίληπτοι.
+    </td>
+    <td>
+        And so in each shape the atoms are quite infinite in number, but their differences of shape are not quite infinite, but only incomprehensible in number.
+    </td>
+</tr>
+<tr>
+    <td>
+        [43] Κινοῦνταί τε συνεχῶς αἱ ἄτομοι τὸν αἰῶνα καὶ αἱ μὲν . . . εἰς μακρὰν ἀπ᾽ ἀλλήλων διιστάμεναι, αἱ δὲ αὖ τὸν παλμὸν ἴσχουσιν, ὅταν τύχωσι τῇ περιπλοκῇ κεκλιμέναι ἢ στεγαζόμεναι παρὰ τῶν πλεκτικῶν.
+    </td>
+    <td>
+        [43] And the atoms move continuously for all time, some of them &lt;falling straight down, others swerving, and others recoiling from their collisions. And of the latter, some are borne on&gt; separating to a long distance from one another, while others again recoil and recoil, whenever they chance to be checked by the interlacing with others, or else shut in by atoms interlaced around them.
+    </td>
+</tr>
+<tr>
+    <td>
+        [44] ἥ τε γὰρ τοῦ κενοῦ φύσις ἡ διορίζουσα ἑκάστην αὐτὴν τοῦτο παρασκευάζει, τὴν ὑπέρεισιν οὐχ οἵα τε οὖσα ποιεῖσθαι·
+    </td>
+    <td>
+        [44] For on the one hand the nature of the void which separates each atom by itself brings this about, as it is not able to afford resistance,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἥ τε στερεότης ἡ ὑπάρχουσα αὐταῖς κατὰ τὴν σύγκρουσιν τὸν ἀποπαλμὸν ποιεῖ, ἐφ᾽ ὁπόσον ἂν ἡ περιπλοκὴ τὴν ἀποκατάστασιν ἐκ τῆς συγκρούσεως διδῷ.
+    </td>
+    <td>
+        and on the other hand the hardness which belongs to the atoms makes them recoil after collision to as great a distance as the interlacing permits separation after the collision.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀρχὴ δὲ τούτων οὐκ ἔστιν, αἰτίων τῶν ἀτόμων οὐσῶν καὶ τοῦ κενοῦ.
+    </td>
+    <td>
+        And these motions have no beginning, since the atoms and the void are the cause.
+    </td>
+</tr>
 </table>
 </body>
 </html>
