--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -336,6 +336,62 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         And these motions have no beginning, since the atoms and the void are the cause.
     </td>
 </tr>
+<tr>
+    <td>
+        [45] Ἡ τοσαύτη δὴ φωνὴ τούτων πάντων μνημονευομένων τὸν ἱκανὸν τύπον ὑποβάλλει τῆς τῶν ὄντων φύσεως ἐπινοίας.
+    </td>
+    <td>
+        [45] These brief sayings, if all these points are borne in mind, afford a sufficient outline for our understanding of the nature of existing things.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν καὶ κόσμοι ἄπειροι εἰσὶν οἵ θ᾽ ὅμοιοι τούτῳ καὶ οἱ ἀνόμοιοι.
+    </td>
+    <td>
+        Furthermore, there are infinite worlds both like and unlike this world of ours.
+    </td>
+</tr>
+<tr>
+    <td>
+        αἵ τε γὰρ ἄτομοι ἄπειροι οὖσαι, ὡς ἄρτι ἀπεδείχθη, φέρονται καὶ πορρωτάτω. 
+    </td>
+    <td>
+        For the atoms being infinite in number, as was proved already, are borne on far out into space.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ κατανἥλωνται αἱ τοιαῦται ἄτομοι, ἐξ ὧν ἂν γένοιτο κόσμος ἢ ὑφ᾽ ὧν ἂν ποιηθείη, οὔτ᾽ εἰς ἕνα οὔτ᾽ εἰς πεπερασμένους, οὔθ᾽ ὅσοι τοιοῦτοι οὔθ᾽ ὅσοι διάφοροι τούτοις. 
+    </td>
+    <td>
+        For those atoms, which are of such nature that a world could be created out of them or made by them, have not been used up either on one world or on a limited number of worlds, nor again on all the worlds which are alike, or on those which are different from these.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε οὐδὲν τὸ ἐμποδοστατῆσόν ἐστι πρὸς τὴν ἀπειρίαν τῶν κόσμων. 
+    </td>
+    <td>
+        So that there nowhere exists an obstacle to the infinite number of the worlds.
+    </td>
+</tr>
+<tr>
+    <td>
+        [46] Καὶ μὴν καὶ τύποι ὁμοιοσχήμονες τοῖς στερεμνίοις εἰσί, λεπτότησιν ἀπέχοντες μακρὰν τῶν φαινομένων.
+    </td>
+    <td>
+        [46] Moreover, there are images like in shape to the solid bodies, far surpassing perceptible things in their subtlety of texture.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε γὰρ ἀποστάσεις ἀδυνατοῦσιν ἐν τῷ περιέχοντι γίνεσθαι τοιαῦται οὔτ᾽ ἐπιτηδειότητες τῆς κατεργασίας τῶν κοιλωμάτων καὶ λεπτοτήτων γίνεσθαι, οὔτε ἀπόρροιαι τὴν ἑξῆς θέσιν καὶ βάσιν διατηροῦσαι, ἥν περ καί ἐν τοῖς στερεμνίοις εἶχον·
+    </td>
+    <td>
+        For it is not impossible that such emanations should be formed in that which surrounds the objects, nor that there should be opportunities for the formation of such hollow and thin frames, nor that there should be effluences which preserve the respective position and order which they had before in the solid bodies:
+    </td>
+</tr>
 </table>
 </body>
 </html>
